# codegen/openapi/traces-openapi.json
@@ -290,7 +290,7 @@
             "example": "0x3e48f"
           },
           "gasUsed": {
-            "type": "string",
+            "type": "number",
             "example": "0x5da9"
           },
           "input": {
@@ -358,25 +358,6 @@
       "CoreBuiltinTransactionRootSuccessTraceDto": {
         "type": "object",
         "properties": {
-          "chainId": {
-            "type": "number",
-            "example": 1,
-            "enum": [
-              1,
-              45,
-              137,
-              10,
-              56,
-              42161,
-              43114,
-              100,
-              250,
-              1313161554,
-              8217,
-              324,
-              8453
-            ]
-          },
           "type": {
             "type": "string",
             "enum": [
@@ -410,7 +391,7 @@
             "example": "0x3e48f"
           },
           "gasUsed": {
-            "type": "string",
+            "type": "number",
             "example": "0x5da9"
           },
           "input": {
@@ -506,7 +487,7 @@
             "type": "string",
             "example": "v1.2.3"
           },
-          "number": {
+          "blockNumber": {
             "type": "number",
             "example": "16123123"
           },
